k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: erlclu
  namespace: erlclu
spec:
  replicas: 5
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: erlclu
  template:
    metadata:
      labels:
        app: erlclu
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 10000
        runAsGroup: 10000
      serviceAccountName: erlclu
      containers:
        - name: erlclu
          image: docker.k3s.differentpla.net/erlclu:0.4.2
          imagePullPolicy: Always
          resources:
            limits:
              cpu: "250m"
              memory: "64Mi"
          readinessProbe:
            httpGet:
              path: /readyz
              port: http
            initialDelaySeconds: 1
            periodSeconds: 10
            failureThreshold: 1
          ports:
            - name: http
              containerPort: 8080
            - name: metrics
              containerPort: 9153
          volumeMounts:
            - name: tls-dist
              mountPath: /certs
              readOnly: true
            - name: ssh-host-key
              mountPath: /erlclu/ssh/system
              readOnly: true
            - name: authorized-keys
              mountPath: /erlclu/ssh/user
              readOnly: true
      volumes:
        - name: tls-dist
          emptyDir:
            medium: "Memory"
            sizeLimit: 32Ki
        - name: ssh-host-key
          secret:
            secretName: ssh-host-key
        - name: authorized-keys
          configMap:
            name: authorized-keys-cm
            items:
            - key: authorized-keys
              path: authorized_keys
